# general-citation-checker

./: .env.example  .gitignore  CLAUDE.md  FINDINGS.md  README.md  pyproject.toml  sample.txt
eval/: gold_set.jsonl  run_eval.py
src/claim_verifier/: cli.py  detection.py  grading.py  orchestrator.py  schemas.py
src/claim_verifier/retrieval/: base.py  exa.py  parallel.py
