[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claim-verifier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.111.0",
    "pydantic>=2.0",
    "parallel-web>=0.1.0",
    "exa-py>=1.0.0",
    "typer>=0.12.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
claim-verifier = "claim_verifier.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/claim_verifier"]
